@@ -1,3 +1,11 @@
+2008-05-20  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/gda-connection.c: applied path to xi mem leak (thanks to
+	from Phil Longstaff)
+	* libgda/gda-data-model.c:
+	* libgda/gda-util.c:
+	* libgda/gda-data-model-array.c: cosmetic changes
+
 2008-05-14  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/gda-config.c: automatically correct spelling mistakes in
